# FujiShader

./: README.md  pyproject.toml
FujiShader/cli/: shader_cli.py
FujiShader/core/: progress.py  stream.py
FujiShader/shader/: __init__.py  ao_ray.py  boxgauss.py  curvature.py  hypsometric.py  integral.py  openness.py  skyview.py  skyview_fast.py  slope.py  specular.py  sunsky.py  swissshade.py  topousm.py  tpi.py  warmcool.py
